<resources>
    <string name="app_name">SchoolResultsManagementApp</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="add_teacher_floating_button">add teacher floating button</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_students_floating_button">add students floating button</string>
    <string name="assessment">Assessment</string>
    <string name="search_student">Search student...</string>
    <string name="o_level">O\'Level</string>
    <string name="a_level">A\'Level</string>

    <string-array name="subjects_array">
        <!-- A-Level Subjects -->
        <item>General Paper</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Geography</item>
        <item>History</item>
        <item>Economics</item>
        <item>Literature in English</item>
        <item>Divinity</item>
        <item>Entrepreneurship</item>
        <item>Art</item>
        <item>Computer Studies</item>
        <item>Physical Education</item>
        <item>Subsidiary Mathematics</item>
        <item>Subsidiary Information and Communication Technology (ICT)</item>
        <item>Subsidiary General Science</item>
        <item>Subsidiary Entrepreneurship</item>
        <item>Subsidiary Entrepreneurship</item>
        <item>Subsidiary Agriculture</item>
        <item>Subsidiary Fine Art</item>
        <item>Subsidiary Music</item>
        <item>Subsidiary Physical Education</item>

        <!-- O-Level Subjects -->
        <item>English Language</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Geography</item>
        <item>History</item>
        <item>Commerce</item>
        <item>Economics</item>
        <item>Literature in English</item>
        <item>Divinity</item>
        <item>Agriculture</item>
        <item>Computer Studies</item>
        <item>Physical Education</item>
        <item>Art and Design</item>
        <item>Music</item>
        <item>Fine Art</item>
        <item>Food and Nutrition</item>
        <item>Home Management</item>
        <item>Woodwork</item>
        <item>Metalwork</item>
        <item>Technical Drawing</item>
        <item>French</item>
        <item>German</item>
        <item>Arabic</item>
        <item>Luganda</item>
        <item>Kiswahili</item>
        <item>Literature in Luganda</item>
        <item>Latin</item>
        <item>Physical Education</item>
        <item>Health Education</item>
        <item>Physical Science</item>
        <item>Commerce</item>
        <item>Accounting</item>
        <item>Principles of Accounts (POA)</item>
        <item>Bookkeeping and Accounts</item>
        <item>Woodwork</item>
        <item>Building and Construction</item>
        <item>Metalwork</item>
        <item>Technical Drawing</item>
        <item>Information and Communication Technology (ICT)</item>
        <item>Entrepreneurship</item>
        <item>Agriculture</item>
        <item>Food and Nutrition</item>
        <item>Health Education</item>
        <item>Computer Studies</item>
        <item>Photography</item>
        <item>General Science</item>
        <item>Physical Education</item>
        <item>Environmental Education</item>
        <item>Art and Design</item>
        <item>Music Dance and Drama</item>
        <item>Christian Religious Education (CRE)</item>
        <item>Islamic Religious Education (IRE)</item>
        <item>Islamic Religious Knowledge (IRK)</item>
        <item>French</item>
        <item>German</item>
        <item>Arabic</item>
        <item>Luganda</item>
        <item>Kiswahili</item>
        <item>Literature in Luganda</item>
        <item>Literature in Swahili</item>
        <item>Literature in Arabic</item>
        <item>Literature in French</item>
        <item>Literature in German</item>
        <item>Christian Religious Education (CRE)</item>
        <item>Islamic Religious Education (IRE)</item>
        <item>Islamic Religious Knowledge (IRK)</item>
        <item>Physical Education</item>
        <item>Environmental Education</item>
    </string-array>


    <string-array name="classes_array">
        <item>senior one</item>
        <item>senior two</item>
        <item>senior three</item>
        <item>senior four</item>
        <item>senior five</item>
        <item>senior six</item>
        <!-- Add more classes as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Students</string>
    <string name="results">Results</string>
    <string name="reports">Reports</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="admin">Admin</string>
    <string name="results_txt">Results</string>
    <string name="home">Home</string>
    <string name="senior_one">Senior One</string>
    <string name="menu_icon">menu icon</string>
    <string name="student_id">Student Id :</string>
    <string name="subject_s">Subject(s):</string>
    <string name="you_have_no_results_at_the_moment">You have no results at the moment</string>


</resources>