<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_report"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_results"
        android:icon="@drawable/baseline_dynamic_feed_24"
        android:title="@string/results_txt"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_classes"
        android:icon="@drawable/ic_class"
        android:title="Classes"
        app:showAsAction="always" />

</menu>
